30.mar (ws)
      - fix #5123: Infinite loop on first measure repeat
      (db)
      - add Greek handbook (most intra-document links don't work)
      - fix English handbook, and update the rest
      - update Brasilian Portuguese instrument list
29.mar (ws)
      - more transpose code debugging, fixing #5007, #5111, #5104, #5115
      (la)
      - fix shortcuts sorting in preferences
      - fix: shortcuts not saved & Enable changing default Qt shortcuts
28.mar (ws)
      - fix #5104: Transpose chordnames hang
      - cleanup of transpose implementation; more testing is needed;
27.mar (ws)
      - fix #5077: Custom key signature only works for first measure
      - fix #5081: Ctrl+drag should not deselect
      - fix #5091: Parethesized accidentals not played back
      - fix #5100: Multi-measure rest display issue for non-full-measure
      - fix #5092: Tremolos can't be dragged to note-stem
      - fix #5095: Articulations move when new instrument inserted
      - fix #5096: Grace notes not erased on paste
      - fix #4902-2: Chordnames not transposed
      - fix #3748: Tuplet and Tie bug
      - fix #4977: Tuplet corruption
25.mar (la)
      - fix #5068: Custom key signature crashes on add measures
      - fix #5067: Wrong note values with some dotted notes when beamed
      - fix arpeggios playback
24.mar (la)
      - fix #4441: Create new key signature no longer works
22.mar (la)
      - fix #5037: Dotted slurs corrupted in print and .pdf export
21.mar (ws)
      - fix #4980: Normal bar line incompatibility
      - fix #4970: Part appears empty
       (la)
      - fix #5029: Solo and Mute checked at the same time
       (db)
      - Notes > Transpose has chord names and key signatures marked by default
20.mar (la)
      - fix #5015 cursor doesn't respond to (Ctrl+)right/left keys in Entry mode.
      - fix #5024 solo in mixer is not working
      - fix #4102 ability to solo multiple instruments at once
17.mar (ws)